# ID4_sensor_kit_launch

adma_orientation_bridge/: package.xml  setup.cfg  setup.py
adma_orientation_bridge/adma_orientation_bridge/: heading_to_ins_orientation.py
id4_sensor_kit_description/: CMakeLists.txt  package.xml
id4_sensor_kit_description/config/: imu_corrector.param.yaml  sensor_kit_calibration.yaml  sensors_calibration.yaml
id4_sensor_kit_description/urdf/: sensor_kit.urdf.xacro  sensor_kit.xacro  sensors.xacro
id4_sensor_kit_launch/: CMakeLists.txt  package.xml
id4_sensor_kit_launch/config/: concatenate_and_time_sync_node.param.yaml
id4_sensor_kit_launch/launch/: adma.launch.py  camera.launch.xml  gnss.launch.xml  lidar.launch.xml  localization.launch.py  pointcloud_preprocessor.launch.py  sensing.launch.xml  sensor_kit_tf.launch.py
initial_pose_generator/: package.xml  setup.cfg  setup.py
initial_pose_generator/initial_pose_generator/: gnss_pose_cov_inflator.py  gnss_to_initialpose.py
localization_bootstrap/: package.xml  setup.cfg  setup.py
localization_bootstrap/localization_bootstrap/: adma_localization_bridge.py
odom_to_twist/: package.xml  setup.cfg  setup.py
odom_to_twist/odom_to_twist/: twist_with_cov.py
