<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_to_twist</name>
  <version>0.10.0</version>
  <description>Time stampts Odometry data to twist with covariance</description>
  <maintainer email="Chidvilas.Karpenahalli@thi.de">Chidvilas Karpenahalli Ramakrishna</maintainer>
  <maintainer email="Subin.Babu@thi.de">Subin Babu</maintainer>
  <maintainer email="Adithya.Mohan@thi.de">Adithya Mohan</maintainer>
  <license>Apache License 2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  
</package>
